PushEvent.data should be NULL for empty payloads

There was code in the PushEvent that would create an empty data object
even when no data was available. Remove it, and add an end-to-end test.

BUG=593454

Review URL: https://codereview.chromium.org/1784583002

Cr-Commit-Position: refs/heads/master@{#380258}

Former-commit-id: 72d7385fd0dfbd77ee41dd53cb0ef7ac16d118d7