third_party/WebKit/Source/modules/push_messaging/PushMessageData.cpp
@@ -42,11 +42,7 @@ PushMessageData* PushMessageData::create(const ArrayBufferOrArrayBufferViewOrUSV
     }
 
     ASSERT(messageData.isNull());
-    return new PushMessageData();
-}
-
-PushMessageData::PushMessageData()
-{
+    return nullptr;
 }
 
 PushMessageData::PushMessageData(const char* data, unsigned bytesSize)
